@@ -9,6 +9,7 @@ Fixed bugs
 - fixed bugs with counting changes in presolving of nonlinear and setppc constraints which resulted in negative values
 - cut off dead end node to correctly track dual bound update during solving
 - avoid constructing and flushing the LP in SCIPwriteLP() and SCIPwriteMIP() to avert unexpected affection
+- apply multi-aggregations before detecting redundancy in propagateCons() of cons_varbound.c to keep bound implications
 
 Build system
 ------------
